<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.avogine</groupId>
  <artifactId>spacegame</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <repositories>
    <repository>
      <id>github</id>
      <name>GitHub Avoduhcado Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/avoduhcado/mavogine</url>
    </repository>
  </repositories>
  
  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
    </plugins>
  </build>
  
  <dependencies>
  	<dependency>
  		<groupId>com.avogine</groupId>
  		<artifactId>base</artifactId>
  		<version>0.0.1-SNAPSHOT</version>
  	</dependency>
  	<dependency>
  		<groupId>org.joml</groupId>
  		<artifactId>joml-primitives</artifactId>
  		<version>1.10.0</version>
  	</dependency>
  </dependencies>
</project>